@@ -244,7 +244,13 @@ _gperl_sv_from_value_internal (const GValue * value,
                                                  FALSE);
 
 		case G_TYPE_PARAM:
-			return newSVGParamSpec (g_value_get_param (value));
+			/* can have NULL here fetching object properties of
+			 * type G_TYPE_PARAM with no value set yet, or from
+			 * ->get_default_value of such a property */
+			{
+				GParamSpec *ps = g_value_get_param (value);
+				return ps == NULL ? &PL_sv_undef : newSVGParamSpec (ps);
+			}
 
 		case G_TYPE_OBJECT:
 			return gperl_new_object (g_value_get_object (value), FALSE);
