@@ -1,3 +1,13 @@
+2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	Merge from HEAD:
+
+	* t/e.t
+	* GValue.xs (_gperl_sv_from_value_internal): Handle NULL
+	GParamSpecs gracefully by returning undef.
+
+	* GParamSpec.xs (newSVGParamSpec): Croak on NULL GParamSpecs.
+
 2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Merge from HEAD:
